--- a/index.html
+++ b/index.html
@@ -4,14 +4,46 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
   <div class="page">
+    <!--header-->
     <header class="header">
 
+      <div class="logo logo_place_header">
+        <img src="./images/logo_place_header.svg" alt="Логотип Практикума">
+      </div>
+
+      <h1 class="header__title">Научиться учиться</h1>
+
+      <p class="header__subtitle">Какие современные и эффективнаые подходы к
+        обучению вы можете использовать в своей жизни? <a href="#" class="header__link">Узнать &#8594	</a></p>
+
+      <img class="header__main-illustration" src="images/header-image.png" alt="Главная иллюстрация">
+
+      <div class="header__square-pic"></div>
+
     </header>
+
+    <!--main-->
     <main class="content">
+      <!-- description -->
       <section class="description">
+        <div class="two-columns">
+          <div class="two-columns__brief">
+            Главные проблемы в обучении
+          </div>
+          <div class="two-columns__main-text">
+            <div class="two-columns__paragraph"> Ни в школе, ни в институте нас не учат тому, как правильно изучать материал.
+              Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания.
+            Зубрежка быстро выветривается и не приносит пользы. </div>
+            <span class="two-columns__paragraph two-columns__span-accent"><b>Вывод:</b> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</span>
+            <div class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим.
+              Эти же техники применяются на примере обучения в Практикуме.</div>
+          </div>
+        </div>
       </section>
 
       <section class="digits">
@@ -23,8 +55,13 @@
       <section class="kaufman">
       </section>
     </main>
-    <footer class="footer">
 
+    <!--footer-->
+    <footer class="footer">
+      <div class="logo logo_place_footer">
+
+
+      </div>
     </footer>
   </div>
 </body>
