--- a/index.html
+++ b/index.html
@@ -46,20 +46,147 @@
         </div>
       </section>
 
+      <!-- цифры и факты-->
       <section class="digits">
+        <h1 class="section-title section-title_theme_light">Цифры и факты</h1>
+        <h2 class="section-subtitle section-subtitle_theme_light">Про учёбу и мозг</h2>
+
+        <table class="table table_theme_light">
+          <tr>
+            <td class="table__cell table__cell_theme_light">
+              <h1 class="table__heading table__heading_theme_light">86 миллиардов</h1>
+              <p class="table__text table__text_theme_light">Число нейронов в мозге человека</p>
+            </td>
+            <td class="table__cell table__cell_theme_light">
+              <h1 class="table__heading table__heading_theme_light">2,1 миллиарда</h1>
+              <p class="table__text table__text_theme_light">Число нуждающихся в повышении квалификации</p>
+              <p class="table__text table__text_theme_light">Всемирный Банк, 2017</p>
+            </td>
+            <td class="table__cell table__cell_theme_light">
+              <h1 class="table__heading table__heading_theme_light">1000 терабайт</h1>
+              <p class="table__text table__text_theme_light">Объём памяти человека</p>
+            </td>
+            <td class="table__cell table__cell_theme_light">
+              <h1 class="table__heading table__heading_theme_light">500 триллионов</h1>
+              <p class="table__text table__text_theme_light">Число ответствнных за обучение нервных синапсов у взрослого человека</p>
+            </td>
+          </tr>
+          <tr>
+            <td class="table__cell table__cell_theme_light">
+              <h1 class="table__heading table__heading_theme_light">420 миллионов</h1>
+              <p class="table__text table__text_theme_light">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+              <p class="table__text table__text_theme_light">Всемирный Банк, 2017</p>
+            </td>
+            <td class="table__cell table__cell_theme_light">
+              <h1 class="table__heading table__heading_theme_light">17-20 лет</h1>
+              <p class="table__text table__text_theme_light">Пик обучаемости</p>
+            </td>
+            <td class="table__cell table__cell_theme_light">
+              <h1 class="table__heading table__heading_theme_light">1885 год</h1>
+              <p class="table__text table__text_theme_light">Открытие кривой забывания</p>
+            </td>
+            <td class="table__cell table__cell_theme_light">
+              <h1 class="table__heading table__heading_theme_light">1889</h1>
+              <p class="table__text table__text_theme_light">Открытие условного рефлекса</p>
+            </td>
+          </tr>
+        </table>
       </section>
 
+      <!-- Метод Фейнмана-->
       <section class="feynman">
+        <h1 class="feynman__title">Метод Фейнмана</h1>
+        <h2 class="feynman__subtitle">Выучить и не забыть.</h2>
+        <a class="feynman__link" href="#">Подробнее &#8594</a>
+        <img class="feynman__image" src="./images/feynman.png" alt="Фейнман">
       </section>
 
       <section class="kaufman">
+        <h1 class="section-title section-title_theme_dark">Принципы обучения</h1>
+        <h2 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h2>
+
+        <table class="table table_theme_dark">
+          <tr>
+            <td class="table__cell table__cell_theme_dark">
+              <h1 class="table__heading table__heading_theme_dark">1</h1>
+              <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+            </td>
+            <td class="table__cell table__cell_theme_dark">
+              <h1 class="table__heading table__heading_theme_dark">2</h1>
+              <p class="table__text table__text_theme_dark">Сосредоточтесь на каком-то одном навыке.</p>
+            </td>
+            <td class="table__cell table__cell_theme_dark">
+              <h1 class="table__heading table__heading_theme_dark">3</h1>
+              <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
+            </td>
+            <td class="table__cell table__cell_theme_dark">
+              <h1 class="table__heading table__heading_theme_dark">4</h1>
+              <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
+            </td>
+            <td class="table__cell table__cell_theme_dark">
+              <h1 class="table__heading table__heading_theme_dark">5</h1>
+              <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+            </td>
+          </tr>
+          <tr>
+            <td class="table__cell table__cell_theme_dark">
+              <h1 class="table__heading table__heading_theme_dark">6</h1>
+              <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
+            </td>
+            <td class="table__cell table__cell_theme_dark">
+              <h1 class="table__heading table__heading_theme_dark">7</h1>
+              <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
+            </td>
+            <td class="table__cell table__cell_theme_dark">
+              <h1 class="table__heading table__heading_theme_dark">8</h1>
+              <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+            </td>
+            <td class="table__cell table__cell_theme_dark">
+              <h1 class="table__heading table__heading_theme_dark">9</h1>
+              <p class="table__text table__text_theme_dark">Занимайтесь по расписани, короткими интенсивными интервалами.</p>
+            </td>
+            <td class="table__cell table__cell_theme_dark">
+              <h1 class="table__heading table__heading_theme_dark">10</h1>
+              <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+            </td>
+          </tr>
+        </table>
+        <img class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="Треугольник">
       </section>
     </main>
 
     <!--footer-->
     <footer class="footer">
-      <div class="logo logo_place_footer">
-
+        <div class="footer__columns">
+          <!--copyright-->
+          <div class="footer__column footer__column_content_copyright">
+            <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип Практикума">
+            <p class="footer__author">&copy 2020. Белогородцева Ольга</p>
+          </div>
+            <!--info-->
+          <div class="footer__column footer__column_content_info">
+            <h1 class="footer__column-heading">О Практикуме</h1>
+            <div class="footer__column-links">
+              <a class="footer__column-link" href="#">Главная</a>
+              <a class="footer__column-link" href="#">Концепция</a>
+              <a class="footer__column-link" href="#">Наставники</a>
+            </div>
+          </div>
+          <!--social-->
+          <div class="footer__column footer__column_content_social">
+            <h1 class="footer__column-heading">Соцсети</h1>
+            <div class="footer__column-links">
+              <a class="footer__column-link" href="#">
+                <img src="images/facebook_color_white.svg" alt="Facebook иконка">Facebook
+              </a>
+              <a class="footer__column-link" href="#">
+                <img src="images/vk_color_white.svg" alt="VK иконка">ВКонтакте
+              </a>
+              <a class="footer__column-link" href="#">
+                <img src="images/instagram_color_white.svg" alt="Instagram иконка">Instagram
+              </a>
+            </div>
+        </div>
 
       </div>
     </footer>
