--- a/index.html
+++ b/index.html
@@ -12,14 +12,12 @@
     <!--header-->
     <header class="header">
 
-      <div class="logo logo_place_header">
-        <img src="./images/logo_place_header.svg" alt="Логотип Практикума">
-      </div>
+      <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="Логотип Практикума">
 
       <h1 class="header__title">Научиться учиться</h1>
 
       <p class="header__subtitle">Какие современные и эффективнаые подходы к
-        обучению вы можете использовать в своей жизни? <a href="#" class="header__link">Узнать &#8594	</a></p>
+        обучению вы можете использовать в своей жизни? <a href="#" class="header__link">Узнать &#8594;	</a></p>
 
       <img class="header__main-illustration" src="images/header-image.png" alt="Главная иллюстрация">
 
@@ -32,126 +30,130 @@
       <!-- description -->
       <section class="description">
         <div class="two-columns">
-          <div class="two-columns__brief">
-            Главные проблемы в обучении
-          </div>
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
-            <div class="two-columns__paragraph"> Ни в школе, ни в институте нас не учат тому, как правильно изучать материал.
+            <p class="two-columns__paragraph"> Ни в школе, ни в институте нас не учат тому, как правильно изучать материал.
               Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания.
-            Зубрежка быстро выветривается и не приносит пользы. </div>
-            <span class="two-columns__paragraph two-columns__span-accent"><b>Вывод:</b> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</span>
-            <div class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим.
-              Эти же техники применяются на примере обучения в Практикуме.</div>
+            Зубрежка быстро выветривается и не приносит пользы. </p>
+
+            <p class="two-columns__paragraph">
+              <span class="two-columns__span-accent">Вывод: </span>
+              учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+            </p>
+
+            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим.
+              Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </div>
       </section>
 
       <!-- цифры и факты-->
       <section class="digits">
-        <h1 class="section-title section-title_theme_light">Цифры и факты</h1>
-        <h2 class="section-subtitle section-subtitle_theme_light">Про учёбу и мозг</h2>
+        <h2 class="section-title section-title_theme_light">Цифры и факты</h2>
+        <h3 class="section-subtitle section-subtitle_theme_light">Про учёбу и мозг</h3>
 
-        <table class="table table_theme_light">
-          <tr>
-            <td class="table__cell table__cell_theme_light">
-              <h1 class="table__heading table__heading_theme_light">86 миллиардов</h1>
+        <ul class="table table_theme_light">
+          <div class="table__row">
+            <li class="table__cell table__cell_theme_light">
+              <h3 class="table__heading table__heading_theme_light">86 миллиардов</h3>
               <p class="table__text table__text_theme_light">Число нейронов в мозге человека</p>
-            </td>
-            <td class="table__cell table__cell_theme_light">
-              <h1 class="table__heading table__heading_theme_light">2,1 миллиарда</h1>
+            </li>
+            <li class="table__cell table__cell_theme_light">
+              <h3 class="table__heading table__heading_theme_light">2,1 миллиарда</h3>
               <p class="table__text table__text_theme_light">Число нуждающихся в повышении квалификации</p>
               <p class="table__text table__text_theme_light">Всемирный Банк, 2017</p>
-            </td>
-            <td class="table__cell table__cell_theme_light">
-              <h1 class="table__heading table__heading_theme_light">1000 терабайт</h1>
+            </li>
+            <li class="table__cell table__cell_theme_light">
+              <h3 class="table__heading table__heading_theme_light">1000 терабайт</h3>
               <p class="table__text table__text_theme_light">Объём памяти человека</p>
-            </td>
-            <td class="table__cell table__cell_theme_light">
-              <h1 class="table__heading table__heading_theme_light">500 триллионов</h1>
+            </li>
+            <li class="table__cell table__cell_theme_light">
+              <h3 class="table__heading table__heading_theme_light">500 триллионов</h3>
               <p class="table__text table__text_theme_light">Число ответствнных за обучение нервных синапсов у взрослого человека</p>
-            </td>
-          </tr>
-          <tr>
-            <td class="table__cell table__cell_theme_light">
-              <h1 class="table__heading table__heading_theme_light">420 миллионов</h1>
+            </li>
+          </div>
+          <div class="table__row">
+            <li class="table__cell table__cell_theme_light">
+              <h3 class="table__heading table__heading_theme_light">420 миллионов</h3>
               <p class="table__text table__text_theme_light">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
               <p class="table__text table__text_theme_light">Всемирный Банк, 2017</p>
-            </td>
-            <td class="table__cell table__cell_theme_light">
-              <h1 class="table__heading table__heading_theme_light">17-20 лет</h1>
+            </li>
+            <li class="table__cell table__cell_theme_light">
+              <h3 class="table__heading table__heading_theme_light">17-20 лет</h3>
               <p class="table__text table__text_theme_light">Пик обучаемости</p>
-            </td>
-            <td class="table__cell table__cell_theme_light">
-              <h1 class="table__heading table__heading_theme_light">1885 год</h1>
+            </li>
+            <li class="table__cell table__cell_theme_light">
+              <h3 class="table__heading table__heading_theme_light">1885 год</h3>
               <p class="table__text table__text_theme_light">Открытие кривой забывания</p>
-            </td>
-            <td class="table__cell table__cell_theme_light">
-              <h1 class="table__heading table__heading_theme_light">1889</h1>
+            </li>
+            <li class="table__cell table__cell_theme_light">
+              <h3 class="table__heading table__heading_theme_light">1889</h3>
               <p class="table__text table__text_theme_light">Открытие условного рефлекса</p>
-            </td>
-          </tr>
-        </table>
+            </li>
+          </div>
+        </ul>
       </section>
 
       <!-- Метод Фейнмана-->
       <section class="feynman">
-        <h1 class="feynman__title">Метод Фейнмана</h1>
-        <h2 class="feynman__subtitle">Выучить и не забыть.</h2>
-        <a class="feynman__link" href="#">Подробнее &#8594</a>
-        <img class="feynman__image" src="./images/feynman.png" alt="Фейнман">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+        <a class="feynman__link" href="#">Подробнее &#8594;</a>
+        <div class="feynman__image"></div>
+        <!--<img class="feynman__image" src="./images/feynman.png" alt="Фейнман">-->
       </section>
 
       <section class="kaufman">
-        <h1 class="section-title section-title_theme_dark">Принципы обучения</h1>
-        <h2 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h2>
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
 
-        <table class="table table_theme_dark">
-          <tr>
-            <td class="table__cell table__cell_theme_dark">
-              <h1 class="table__heading table__heading_theme_dark">1</h1>
+        <ul class="table table_theme_dark">
+          <div class="table__row">
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">1</h3>
               <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
-            </td>
-            <td class="table__cell table__cell_theme_dark">
-              <h1 class="table__heading table__heading_theme_dark">2</h1>
+            </li>
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">2</h3>
               <p class="table__text table__text_theme_dark">Сосредоточтесь на каком-то одном навыке.</p>
-            </td>
-            <td class="table__cell table__cell_theme_dark">
-              <h1 class="table__heading table__heading_theme_dark">3</h1>
+            </li>
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">3</h3>
               <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
-            </td>
-            <td class="table__cell table__cell_theme_dark">
-              <h1 class="table__heading table__heading_theme_dark">4</h1>
+            </li>
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">4</h3>
               <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
-            </td>
-            <td class="table__cell table__cell_theme_dark">
-              <h1 class="table__heading table__heading_theme_dark">5</h1>
+            </li>
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">5</h3>
               <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
-            </td>
-          </tr>
-          <tr>
-            <td class="table__cell table__cell_theme_dark">
-              <h1 class="table__heading table__heading_theme_dark">6</h1>
+            </li>
+          </div>
+          <div class="table__row">
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">6</h3>
               <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
-            </td>
-            <td class="table__cell table__cell_theme_dark">
-              <h1 class="table__heading table__heading_theme_dark">7</h1>
+            </li>
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">7</h3>
               <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
-            </td>
-            <td class="table__cell table__cell_theme_dark">
-              <h1 class="table__heading table__heading_theme_dark">8</h1>
+            </li>
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">8</h3>
               <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
-            </td>
-            <td class="table__cell table__cell_theme_dark">
-              <h1 class="table__heading table__heading_theme_dark">9</h1>
+            </li>
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">9</h3>
               <p class="table__text table__text_theme_dark">Занимайтесь по расписани, короткими интенсивными интервалами.</p>
-            </td>
-            <td class="table__cell table__cell_theme_dark">
-              <h1 class="table__heading table__heading_theme_dark">10</h1>
+            </li>
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">10</h3>
               <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
-            </td>
-          </tr>
-        </table>
-        <img class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="Треугольник">
+            </li>
+          </div>
+        </ul>
+        <div class="kaufman__triangle"></div>
       </section>
     </main>
 
@@ -161,32 +163,32 @@
           <!--copyright-->
           <div class="footer__column footer__column_content_copyright">
             <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип Практикума">
-            <p class="footer__author">&copy 2020. Белогородцева Ольга</p>
+            <p class="footer__author">&copy; 2020. Белогородцева Ольга</p>
           </div>
             <!--info-->
-          <div class="footer__column footer__column_content_info">
-            <h1 class="footer__column-heading">О Практикуме</h1>
-            <div class="footer__column-links">
-              <a class="footer__column-link" href="#">Главная</a>
-              <a class="footer__column-link" href="#">Концепция</a>
-              <a class="footer__column-link" href="#">Наставники</a>
-            </div>
-          </div>
+          <nav class="footer__column footer__column_content_info">
+            <h2 class="footer__column-heading">О Практикуме</h2>
+            <ul class="footer__column-links">
+              <li><a class="footer__column-link" href="#">Главная</a></li>
+              <li><a class="footer__column-link" href="#">Концепция</a></li>
+              <li><a class="footer__column-link" href="#">Наставники</a></li>
+            </ul>
+          </nav>
           <!--social-->
-          <div class="footer__column footer__column_content_social">
-            <h1 class="footer__column-heading">Соцсети</h1>
-            <div class="footer__column-links">
-              <a class="footer__column-link" href="#">
-                <img src="images/facebook_color_white.svg" alt="Facebook иконка">Facebook
-              </a>
-              <a class="footer__column-link" href="#">
-                <img src="images/vk_color_white.svg" alt="VK иконка">ВКонтакте
-              </a>
-              <a class="footer__column-link" href="#">
-                <img src="images/instagram_color_white.svg" alt="Instagram иконка">Instagram
-              </a>
-            </div>
-        </div>
+          <nav class="footer__column footer__column_content_social">
+            <h2 class="footer__column-heading">Соцсети</h2>
+            <ul class="footer__column-links">
+              <li><a class="footer__column-link" href="#">
+                <img class="footer__social-icon" src="images/facebook_color_white.svg" alt="Facebook иконка">Facebook
+              </a></li>
+              <li></li><a class="footer__column-link" href="#">
+                <img class="footer__social-icon" src="images/vk_color_white.svg" alt="VK иконка">ВКонтакте
+              </a></li>
+              <li></li><a class="footer__column-link" href="#">
+                <img class="footer__social-icon" src="images/instagram_color_white.svg" alt="Instagram иконка">Instagram
+              </a></li>
+            </ul>
+        </nav>
 
       </div>
     </footer>
