--- a/index.html
+++ b/index.html
@@ -181,10 +181,10 @@
               <li><a class="footer__column-link" href="#">
                 <img class="footer__social-icon" src="images/facebook_color_white.svg" alt="Facebook иконка">Facebook
               </a></li>
-              <li></li><a class="footer__column-link" href="#">
+              <li><a class="footer__column-link" href="#">
                 <img class="footer__social-icon" src="images/vk_color_white.svg" alt="VK иконка">ВКонтакте
               </a></li>
-              <li></li><a class="footer__column-link" href="#">
+              <li><a class="footer__column-link" href="#">
                 <img class="footer__social-icon" src="images/instagram_color_white.svg" alt="Instagram иконка">Instagram
               </a></li>
             </ul>
