--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1 class="header__title">Научиться учиться</h1>
 
       <p class="header__subtitle">Какие современные и эффективнаые подходы к
-        обучению вы можете использовать в своей жизни? <a href="#" class="header__link">Узнать &#8594;	</a></p>
+        обучению вы можете использовать в своей жизни? <a href="#" class="header__link" target="_blank">Узнать &#8594;	</a></p>
 
       <img class="header__main-illustration" src="images/header-image.png" alt="Главная иллюстрация">
 
@@ -98,7 +98,7 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
-        <a class="feynman__link" href="#">Подробнее &#8594;</a>
+        <a class="feynman__link" href="#" target="_blank">Подробнее &#8594;</a>
         <div class="feynman__image"></div>
         <!--<img class="feynman__image" src="./images/feynman.png" alt="Фейнман">-->
       </section>
@@ -169,22 +169,22 @@
           <nav class="footer__column footer__column_content_info">
             <h2 class="footer__column-heading">О Практикуме</h2>
             <ul class="footer__column-links">
-              <li><a class="footer__column-link" href="#">Главная</a></li>
-              <li><a class="footer__column-link" href="#">Концепция</a></li>
-              <li><a class="footer__column-link" href="#">Наставники</a></li>
+              <li><a class="footer__column-link" href="#" target="_blank">Главная</a></li>
+              <li><a class="footer__column-link" href="#" target="_blank">Концепция</a></li>
+              <li><a class="footer__column-link" href="#" target="_blank">Наставники</a></li>
             </ul>
           </nav>
           <!--social-->
           <nav class="footer__column footer__column_content_social">
             <h2 class="footer__column-heading">Соцсети</h2>
             <ul class="footer__column-links">
-              <li><a class="footer__column-link" href="#">
+              <li><a class="footer__column-link" href="#" target="_blank">
                 <img class="footer__social-icon" src="images/facebook_color_white.svg" alt="Facebook иконка">Facebook
               </a></li>
-              <li><a class="footer__column-link" href="#">
+              <li><a class="footer__column-link" href="#" target="_blank">
                 <img class="footer__social-icon" src="images/vk_color_white.svg" alt="VK иконка">ВКонтакте
               </a></li>
-              <li><a class="footer__column-link" href="#">
+              <li><a class="footer__column-link" href="#" target="_blank">
                 <img class="footer__social-icon" src="images/instagram_color_white.svg" alt="Instagram иконка">Instagram
               </a></li>
             </ul>
