--- a/index.html
+++ b/index.html
@@ -50,10 +50,9 @@
       <!-- цифры и факты-->
       <section class="digits">
         <h2 class="section-title section-title_theme_light">Цифры и факты</h2>
-        <h3 class="section-subtitle section-subtitle_theme_light">Про учёбу и мозг</h3>
+        <p class="section-subtitle section-subtitle_theme_light">Про учёбу и мозг</p>
 
         <ul class="table table_theme_light">
-          <div class="table__row">
             <li class="table__cell table__cell_theme_light">
               <h3 class="table__heading table__heading_theme_light">86 миллиардов</h3>
               <p class="table__text table__text_theme_light">Число нейронов в мозге человека</p>
@@ -71,8 +70,6 @@
               <h3 class="table__heading table__heading_theme_light">500 триллионов</h3>
               <p class="table__text table__text_theme_light">Число ответствнных за обучение нервных синапсов у взрослого человека</p>
             </li>
-          </div>
-          <div class="table__row">
             <li class="table__cell table__cell_theme_light">
               <h3 class="table__heading table__heading_theme_light">420 миллионов</h3>
               <p class="table__text table__text_theme_light">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
@@ -90,7 +87,6 @@
               <h3 class="table__heading table__heading_theme_light">1889</h3>
               <p class="table__text table__text_theme_light">Открытие условного рефлекса</p>
             </li>
-          </div>
         </ul>
       </section>
 
@@ -99,16 +95,13 @@
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
         <a class="feynman__link" href="#" target="_blank">Подробнее &#8594;</a>
-        <div class="feynman__image"></div>
-        <!--<img class="feynman__image" src="./images/feynman.png" alt="Фейнман">-->
       </section>
 
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
-        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
 
         <ul class="table table_theme_dark">
-          <div class="table__row">
             <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">1</h3>
               <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
@@ -129,8 +122,6 @@
               <h3 class="table__heading table__heading_theme_dark">5</h3>
               <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
             </li>
-          </div>
-          <div class="table__row">
             <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">6</h3>
               <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
@@ -151,7 +142,6 @@
               <h3 class="table__heading table__heading_theme_dark">10</h3>
               <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
             </li>
-          </div>
         </ul>
         <div class="kaufman__triangle"></div>
       </section>
