--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./vendor/normalize.css">
+  <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body>
   <div class="page">
@@ -16,8 +16,8 @@
 
       <h1 class="header__title">Научиться учиться</h1>
 
-      <p class="header__subtitle">Какие современные и эффективнаые подходы к
-        обучению вы можете использовать в своей жизни? <a href="#" class="header__link" target="_blank">Узнать &#8594;	</a></p>
+      <p class="header__subtitle">Какие современные и эффективные подходы к
+        обучению вы можете использовать в своей жизни? <a href="#" class="header__link" target="_blank">Узнать &#8594;</a></p>
 
       <img class="header__main-illustration" src="images/header-image.png" alt="Главная иллюстрация">
 
@@ -27,6 +27,7 @@
 
     <!--main-->
     <main class="content">
+
       <!-- description -->
       <section class="description">
         <div class="two-columns">
@@ -47,55 +48,134 @@
         </div>
       </section>
 
+      <!-- techniques -->
+      <section class="techniques">
+        <h2 class="section-title section-title_theme_light">Техники обучения</h2>
+        <p class="section-subtitle section-subtitle_theme_light">Пять практик от Барбары Оакли</p>
+        <ul class="cards">
+          <li class="cards__item">
+            <img class="cards__image" src="images/cards-attention.png" alt="Изображение с книгой">
+            <h2 class="cards__title">Два вида внимания</h2>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="images/cards-recall.png" alt="Изображение статуи">
+            <h2 class="cards__title">Recall</h2>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="images/cards-interliving.png" alt="Изображение здания">
+            <h2 class="cards__title">Интерливинг</h2>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="images/cards-question.png" alt="Изображение с книгой">
+            <h2 class="cards__title">Вопросы</h2>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="images/cards-competence.png" alt="Изображение с книгой">
+            <h2 class="cards__title">Иллюзия компетентности</h2>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          </li>
+        </ul>
+      </section>
+
+      <!-- video -->
+      <section class="video">
+        <h2 class="section-title section-title_theme_light">Видео на TED</h2>
+        <p class="section-subtitle section-subtitle_theme_light">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allowfullscreen></iframe>
+          <iframe class="video__iframe" id="ytplayer1" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </section>
+
+      <!-- oakley -->
+      <section class="oakley">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика.
+              Она считала себя законченным гуманитарием, причём далеко не самым умным.
+              В армии она изучала русский язык, чтобы получить надбавку, да так успешно,
+              что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику.
+              И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то
+              «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно
+              с первого взгляда.</p>
+          </div>
+        </div>
+        </section>
+
+        <!-- Метод Фейнмана-->
+        <section class="feynman">
+          <h2 class="feynman__title">Метод Фейнмана</h2>
+          <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+          <a class="feynman__link" href="#" target="_blank">Подробнее &#8594;</a>
+        </section>
+
+
       <!-- цифры и факты-->
       <section class="digits">
         <h2 class="section-title section-title_theme_light">Цифры и факты</h2>
         <p class="section-subtitle section-subtitle_theme_light">Про учёбу и мозг</p>
 
         <ul class="table table_theme_light">
-            <li class="table__cell table__cell_theme_light">
-              <h3 class="table__heading table__heading_theme_light">86 миллиардов</h3>
-              <p class="table__text table__text_theme_light">Число нейронов в мозге человека</p>
-            </li>
-            <li class="table__cell table__cell_theme_light">
-              <h3 class="table__heading table__heading_theme_light">2,1 миллиарда</h3>
-              <p class="table__text table__text_theme_light">Число нуждающихся в повышении квалификации</p>
-              <p class="table__text table__text_theme_light">Всемирный Банк, 2017</p>
-            </li>
-            <li class="table__cell table__cell_theme_light">
-              <h3 class="table__heading table__heading_theme_light">1000 терабайт</h3>
-              <p class="table__text table__text_theme_light">Объём памяти человека</p>
-            </li>
-            <li class="table__cell table__cell_theme_light">
-              <h3 class="table__heading table__heading_theme_light">500 триллионов</h3>
-              <p class="table__text table__text_theme_light">Число ответствнных за обучение нервных синапсов у взрослого человека</p>
-            </li>
-            <li class="table__cell table__cell_theme_light">
-              <h3 class="table__heading table__heading_theme_light">420 миллионов</h3>
-              <p class="table__text table__text_theme_light">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-              <p class="table__text table__text_theme_light">Всемирный Банк, 2017</p>
-            </li>
-            <li class="table__cell table__cell_theme_light">
-              <h3 class="table__heading table__heading_theme_light">17-20 лет</h3>
-              <p class="table__text table__text_theme_light">Пик обучаемости</p>
-            </li>
-            <li class="table__cell table__cell_theme_light">
-              <h3 class="table__heading table__heading_theme_light">1885 год</h3>
-              <p class="table__text table__text_theme_light">Открытие кривой забывания</p>
-            </li>
-            <li class="table__cell table__cell_theme_light">
-              <h3 class="table__heading table__heading_theme_light">1889</h3>
-              <p class="table__text table__text_theme_light">Открытие условного рефлекса</p>
-            </li>
+          <li class="table__cell table__cell_theme_light">
+            <h3 class="table__heading table__heading_theme_light">86 миллиардов</h3>
+            <p class="table__text table__text_theme_light">Число нейронов в мозге человека</p>
+          </li>
+          <li class="table__cell table__cell_theme_light">
+            <h3 class="table__heading table__heading_theme_light">2,1 миллиарда</h3>
+            <p class="table__text table__text_theme_light">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text table__text_theme_light">Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell table__cell_theme_light">
+            <h3 class="table__heading table__heading_theme_light">1000 терабайт</h3>
+            <p class="table__text table__text_theme_light">Объём памяти человека</p>
+          </li>
+          <li class="table__cell table__cell_theme_light">
+            <h3 class="table__heading table__heading_theme_light">500 триллионов</h3>
+            <p class="table__text table__text_theme_light">Число ответствнных за обучение нервных синапсов у взрослого человека</p>
+          </li>
+          <li class="table__cell table__cell_theme_light">
+            <h3 class="table__heading table__heading_theme_light">420 миллионов</h3>
+            <p class="table__text table__text_theme_light">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text table__text_theme_light">Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell table__cell_theme_light">
+            <h3 class="table__heading table__heading_theme_light">17-20 лет</h3>
+            <p class="table__text table__text_theme_light">Пик обучаемости</p>
+          </li>
+          <li class="table__cell table__cell_theme_light">
+            <h3 class="table__heading table__heading_theme_light">1885 год</h3>
+            <p class="table__text table__text_theme_light">Открытие кривой забывания</p>
+          </li>
+          <li class="table__cell table__cell_theme_light">
+            <h3 class="table__heading table__heading_theme_light">1889</h3>
+            <p class="table__text table__text_theme_light">Открытие условного рефлекса</p>
+          </li>
         </ul>
       </section>
 
-      <!-- Метод Фейнмана-->
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
-        <a class="feynman__link" href="#" target="_blank">Подробнее &#8594;</a>
-      </section>
+        <!-- khan -->
+        <section class="khan">
+          <div class="khan__containter">
+            <h3 class="khan__author">Салман Хан</h3>
+            <h2 class="khan__title">Весь мир - школа</h2>
+            <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру.
+              Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить
+              навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+            <h3 class="khan__quote-author">Джордж Лукас</h3>
+            <h3 class="khan__quote-author-subline">Кинорежиссер, продюсер</h3>
+            <div class="khan__book-container">
+              <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Весь мир - школа">
+              <a class="khan__buy-link" href="#">Купить книгу &#8594;</a>
+            </div>
+          </div>
+        </section>
+
+        <!-- kaufman -->
 
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
@@ -146,6 +226,19 @@
         <div class="kaufman__triangle"></div>
       </section>
     </main>
+
+
+    <!-- resources -->
+    <section class="resources">
+      <h2 class="section-title">Полезные ресурсы</h2>
+      <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+      <div class="resources__logo-zone">
+        <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Arzamas">
+        <img class="resources__logo" src="./images/logo/resources-n1.svg" alt="N+1">
+        <img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Strelka">
+        <img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Полка">
+      </div>
+    </section>
 
     <!--footer-->
     <footer class="footer">
