--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <h3 class="khan__quote-author-subline">Кинорежиссер, продюсер</h3>
             <div class="khan__book-container">
               <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Весь мир - школа">
-              <a class="khan__buy-link" href="#">Купить книгу &#8594;</a>
+              <a class="khan__buy-link" href="#" target="_blank">Купить книгу &#8594;</a>
             </div>
           </div>
         </section>
