--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="./vendor/normalize.css">
   <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body>
@@ -21,7 +20,7 @@
 
       <img class="header__main-illustration" src="images/header-image.png" alt="Главная иллюстрация">
 
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
 
     </header>
 
@@ -30,7 +29,7 @@
 
       <!-- description -->
       <section class="description">
-        <div class="two-columns">
+        <article class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph"> Ни в школе, ни в институте нас не учат тому, как правильно изучать материал.
@@ -45,37 +44,37 @@
             <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим.
               Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
-        </div>
+        </article>
       </section>
 
       <!-- techniques -->
       <section class="techniques">
-        <h2 class="section-title section-title_theme_light">Техники обучения</h2>
-        <p class="section-subtitle section-subtitle_theme_light">Пять практик от Барбары Оакли</p>
+        <h2 class="section-title">Техники обучения</h2>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <ul class="cards">
           <li class="cards__item">
             <img class="cards__image" src="images/cards-attention.png" alt="Изображение с книгой">
-            <h2 class="cards__title">Два вида внимания</h2>
+            <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
           </li>
           <li class="cards__item">
             <img class="cards__image" src="images/cards-recall.png" alt="Изображение статуи">
-            <h2 class="cards__title">Recall</h2>
+            <h3 class="cards__title">Recall</h3>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
           </li>
           <li class="cards__item">
             <img class="cards__image" src="images/cards-interliving.png" alt="Изображение здания">
-            <h2 class="cards__title">Интерливинг</h2>
+            <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </li>
           <li class="cards__item">
             <img class="cards__image" src="images/cards-question.png" alt="Изображение с книгой">
-            <h2 class="cards__title">Вопросы</h2>
+            <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
           </li>
           <li class="cards__item">
             <img class="cards__image" src="images/cards-competence.png" alt="Изображение с книгой">
-            <h2 class="cards__title">Иллюзия компетентности</h2>
+            <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
           </li>
         </ul>
@@ -86,14 +85,14 @@
         <h2 class="section-title section-title_theme_light">Видео на TED</h2>
         <p class="section-subtitle section-subtitle_theme_light">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allowfullscreen></iframe>
-          <iframe class="video__iframe" id="ytplayer1" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allowfullscreen></iframe>
+          <iframe class="video__iframe" id="ytplayer" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
+          <iframe class="video__iframe" id="ytplayer1" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
         </div>
       </section>
 
       <!-- oakley -->
       <section class="oakley">
-        <div class="two-columns">
+        <article class="two-columns">
           <h2 class="two-columns__brief">История Барбары Оакли.</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">С детства Барбаре не давалась математика.
@@ -104,13 +103,13 @@
               «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно
               с первого взгляда.</p>
           </div>
-        </div>
+        </article>
         </section>
 
         <!-- Метод Фейнмана-->
         <section class="feynman">
           <h2 class="feynman__title">Метод Фейнмана</h2>
-          <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+          <p class="feynman__subtitle">Выучить и не забыть.</p>
           <a class="feynman__link" href="#" target="_blank">Подробнее &#8594;</a>
         </section>
 
@@ -161,13 +160,13 @@
         <!-- khan -->
         <section class="khan">
           <div class="khan__containter">
-            <h3 class="khan__author">Салман Хан</h3>
+            <p class="khan__author">Салман Хан</p>
             <h2 class="khan__title">Весь мир - школа</h2>
             <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру.
               Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить
               навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
-            <h3 class="khan__quote-author">Джордж Лукас</h3>
-            <h3 class="khan__quote-author-subline">Кинорежиссер, продюсер</h3>
+            <p class="khan__quote-author">Джордж Лукас</p>
+            <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
             <div class="khan__book-container">
               <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Весь мир - школа">
               <a class="khan__buy-link" href="#" target="_blank">Купить книгу &#8594;</a>
@@ -223,7 +222,7 @@
               <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
             </li>
         </ul>
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation"></div>
       </section>
     </main>
 
@@ -232,12 +231,12 @@
     <section class="resources">
       <h2 class="section-title">Полезные ресурсы</h2>
       <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-      <div class="resources__logo-zone">
-        <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Arzamas">
-        <img class="resources__logo" src="./images/logo/resources-n1.svg" alt="N+1">
-        <img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Strelka">
-        <img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Полка">
-      </div>
+      <ul class="resources__logo-zone">
+        <li><a href="#" target="_blank"><img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Arzamas"></a></li>
+        <li><a href="#" target="_blank"><img class="resources__logo" src="./images/logo/resources-n1.svg" alt="N+1"></a></li>
+        <li><a href="#" target="_blank"><img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Strelka"></a></li>
+        <li><a href="#" target="_blank"><img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Полка"></a></li>
+      </ul>
     </section>
 
     <!--footer-->
