--- a/index.html
+++ b/index.html
@@ -232,10 +232,26 @@
       <h2 class="section-title">Полезные ресурсы</h2>
       <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
       <ul class="resources__logo-zone">
-        <li><a href="#" target="_blank"><img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Arzamas"></a></li>
-        <li><a href="#" target="_blank"><img class="resources__logo" src="./images/logo/resources-n1.svg" alt="N+1"></a></li>
-        <li><a href="#" target="_blank"><img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Strelka"></a></li>
-        <li><a href="#" target="_blank"><img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Полка"></a></li>
+        <li class="resources__logo-list">
+          <a class="resources__logo-link" href="#" target="_blank">
+            <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Arzamas">
+          </a>
+        </li>
+        <li class="resources__logo-list">
+          <a class="resources__logo-link" href="#" target="_blank">
+            <img class="resources__logo" src="./images/logo/resources-n1.svg" alt="N+1">
+          </a>
+        </li>
+        <li class="resources__logo-list">
+          <a class="resources__logo-link" href="#" target="_blank">
+            <img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Strelka">
+          </a>
+        </li>
+        <li class="resources__logo-list">
+          <a class="resources__logo-link" href="#" target="_blank">
+            <img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Полка">
+          </a>
+        </li>
       </ul>
     </section>
 
