--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--header-->
     <header class="header">
 
-      <img class="logo logo_place_header" src="./images/logo.png" alt="Логотип Практикума">
+      <img class="logo logo_place_header" src="images/logo_place_header.svg" alt="Логотип Практикума">
 
       <h1 class="header__title">Научиться учиться</h1>
 
