--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <!--header-->
     <header class="header">
 
-      <img class="logo logo_place_header" src="images/logo_place_header.svg" alt="Логотип Практикума">
+      <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="Логотип Практикума">
 
       <h1 class="header__title">Научиться учиться</h1>
 
       <p class="header__subtitle">Какие современные и эффективные подходы к
         обучению вы можете использовать в своей жизни? <a href="#" class="header__link" target="_blank">Узнать &#8594;</a></p>
 
-      <img class="header__main-illustration" src="images/header-image.png" alt="Главная иллюстрация">
+      <img class="header__main-illustration" src="./images/header-image.png" alt="Главная иллюстрация">
 
       <div class="header__square-pic rotation"></div>
 
@@ -85,8 +85,8 @@
         <h2 class="section-title section-title_theme_light">Видео на TED</h2>
         <p class="section-subtitle section-subtitle_theme_light">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <iframe class="video__iframe" id="ytplayer" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
-          <iframe class="video__iframe" id="ytplayer1" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
+          <!-- <iframe class="video__iframe" id="ytplayer" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
+          <iframe class="video__iframe" id="ytplayer1" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe> -->
         </div>
       </section>
 
