--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
         <h2 class="section-title section-title_theme_light">Видео на TED</h2>
         <p class="section-subtitle section-subtitle_theme_light">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <!-- <iframe class="video__iframe" id="ytplayer" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
-          <iframe class="video__iframe" id="ytplayer1" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe> -->
+          <iframe class="video__iframe" id="ytplayer" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
+          <iframe class="video__iframe" id="ytplayer1" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
         </div>
       </section>
 
