--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="/pages/index.css">
+  <link rel="stylesheet" href="pages/index.css">
 </head>
 <body>
   <div class="page">
     <!--header-->
     <header class="header">
 
-      <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="Логотип Практикума">
+      <img class="logo logo_place_header" src="images/logo_place_header.svg" alt="Логотип Практикума">
 
       <h1 class="header__title">Научиться учиться</h1>
 
       <p class="header__subtitle">Какие современные и эффективные подходы к
         обучению вы можете использовать в своей жизни? <a href="#" class="header__link" target="_blank">Узнать &#8594;</a></p>
 
-      <img class="header__main-illustration" src="./images/header-image.png" alt="Главная иллюстрация">
+      <img class="header__main-illustration" src="images/header-image.png" alt="Главная иллюстрация">
 
       <div class="header__square-pic rotation"></div>
 
@@ -168,7 +168,7 @@
             <p class="khan__quote-author">Джордж Лукас</p>
             <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
             <div class="khan__book-container">
-              <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Весь мир - школа">
+              <img class="khan__book-pic" src="images/khan-book.jpg" alt="Весь мир - школа">
               <a class="khan__buy-link" href="#" target="_blank">Купить книгу &#8594;</a>
             </div>
           </div>
@@ -234,22 +234,22 @@
       <ul class="resources__logo-zone">
         <li class="resources__logo-list">
           <a class="resources__logo-link" href="#" target="_blank">
-            <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Arzamas">
+            <img class="resources__logo" src="images/logo/resources-arzamas.svg" alt="Arzamas">
           </a>
         </li>
         <li class="resources__logo-list">
           <a class="resources__logo-link" href="#" target="_blank">
-            <img class="resources__logo" src="./images/logo/resources-n1.svg" alt="N+1">
+            <img class="resources__logo" src="images/logo/resources-n1.svg" alt="N+1">
           </a>
         </li>
         <li class="resources__logo-list">
           <a class="resources__logo-link" href="#" target="_blank">
-            <img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Strelka">
+            <img class="resources__logo" src="images/logo/resources-strelka.svg" alt="Strelka">
           </a>
         </li>
         <li class="resources__logo-list">
           <a class="resources__logo-link" href="#" target="_blank">
-            <img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Полка">
+            <img class="resources__logo" src="images/logo/resources-polka.svg" alt="Полка">
           </a>
         </li>
       </ul>
@@ -260,7 +260,7 @@
         <div class="footer__columns">
           <!--copyright-->
           <div class="footer__column footer__column_content_copyright">
-            <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип Практикума">
+            <img class="logo logo_place_footer" src="images/logo_place_footer.svg" alt="Логотип Практикума">
             <p class="footer__author">&copy; 2020. Белогородцева Ольга</p>
           </div>
             <!--info-->
